# micawber

./: .travis.yml  MANIFEST.in  README.rst  micawber.py  pyproject.toml  runtests.py  setup.py  tests.py
.github/workflows/: tests.yaml  wheels.yaml
docs/: Makefile  api.rst  conf.py  django.rst  examples.rst  flask.rst  getting_started.rst  index.rst  installation.rst  make.bat
examples/django_ex/: manage.py  settings.py  urls.py  views.py
examples/django_ex/templates/: example.html
examples/flask_ex/: app.py
examples/flask_ex/templates/: example.html
examples/python_ex/: example.py
micawber/: __init__.py  cache.py  compat.py  exceptions.py  parsers.py  providers.py  test_utils.py  tests.py
micawber/contrib/: mcflask.py  providers.py
micawber/contrib/mcdjango/: __init__.py  providers.py
micawber/contrib/mcdjango/mcdjango_tests/: tests.py
micawber/contrib/mcdjango/templates/micawber/: link.html  photo.html  video.html
micawber/contrib/mcdjango/templatetags/: micawber_tags.py
