[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micawber"
dynamic = ["version"]
description = "a small library for extracting rich content from urls"
dependencies = ["lxml", "beautifulsoup4"]
readme = "README.rst"
authors = [
    { name = "Charles Leifer", email = "coleifer@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
cache = ["redis>=3.0.0"]

[project.urls]
Repository = "https://github.com/coleifer/micawber"
Documentation = "https://micawber.readthedocs.io/"

[tool.setuptools.packages.find]
include= ["micawber*"]

[tool.setuptools.dynamic]
version = { attr = "micawber.__version__" }
